test/errors/assign_local_bad_type.luv
# RET: 1
# ERR: {self}:7:13:    myvar = "hi!"
# ERR: {ssss}                  ^ error: Cannot assign type str to type i32.

def int main():
    myvar = 1
    myvar = "hi!"
    return 0
